--- a/ExtremeFirestarters/ExtremeFirestarters.csproj
+++ b/ExtremeFirestarters/ExtremeFirestarters.csproj
@@ -4,10 +4,15 @@
     <TargetFramework>net8.0</TargetFramework>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <OutputPath>bin\$(Configuration)\Mods\mod</OutputPath>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
-    <Reference Include="VintagestoryAPI">
+	  <Reference Include="InsanityLib">
+		  <HintPath>..\..\InsanityLib\InsanityLib\bin\Debug\Mods\mod\InsanityLib.dll</HintPath>
+		  <Private>False</Private>
+	  </Reference>
+	  <Reference Include="VintagestoryAPI">
       <HintPath>$(VINTAGE_STORY)/VintagestoryAPI.dll</HintPath>
       <Private>false</Private>
     </Reference>
